# Disku

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  index.html  package.json  tsconfig.json
disku-bench/: Cargo.toml  RESULTS.md
disku-bench/src/: bench_bufsize.rs  bench_cache.rs  bench_counting.rs  bench_threads.rs  bench_utils.rs  lib.rs  main.rs
disku-core/: Cargo.toml
disku-core/src/: lib.rs  mac_scanner.rs  mft_scanner.rs  scanner.rs  tree.rs  utils.rs
disku-tui/: Cargo.toml  build.rs
disku-tui/src/: main.rs  ui.rs
src/: App.svelte  app.css  lib.rs  mac_scanner.rs  main.rs  main.ts  mft_scanner.rs  scanner.rs  tree.rs  ui.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: Browser.svelte  ConfirmDelete.svelte  DirectoryView.svelte  DrivePicker.svelte  PathInput.svelte  PlaceholderTab.svelte  Scanning.svelte  StartScreen.svelte  TabBar.svelte  WindowControls.svelte  utils.ts
tests/: bench.sh
