[package]
name = "disku-bench"
version = "0.1.0"
edition = "2021"

[lib]
name = "disku_bench"
path = "src/lib.rs"

[[bin]]
name = "bench_scan"
path = "src/main.rs"

[[bin]]
name = "bench_counting"
path = "src/bench_counting.rs"

[[bin]]
name = "bench_bufsize"
path = "src/bench_bufsize.rs"

[[bin]]
name = "bench_threads"
path = "src/bench_threads.rs"

[[bin]]
name = "bench_cache"
path = "src/bench_cache.rs"

[dependencies]
disku-core = { path = "../disku-core" }
libc = "0.2"
rayon = "1.11"
